// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conventional-changelog-ori doesnt replace @username if wrapped in backticks 1`] = `
"### 1.0.0 - 2019-02-26

#### 📦 Dependencies

- Updated \\\\\`@types\\\\\` packages. ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori handles merge commits 1`] = `
"### 1.0.0 - 2019-02-26

#### 🐞 Fixes

- use yarn ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori handles multiple notes 1`] = `
"# 1.0.0 - 2019-02-26

Button is more buttony

Made a lot of changes

#### 🎉 Release

- Initial release ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- **[button]** Made button changes ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori handles revert type 1`] = `
"### 1.0.0 - 2019-02-26

#### ↩️ Reverts

- **[foo]** undo this ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori links commits/issues to deep repositories correctly 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- supports sub-package links ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d)), closes  _#10_"
`;

exports[`conventional-changelog-ori only replaces with link to user if it is an username 1`] = `
"### 1.0.0 - 2019-02-26

#### 🐞 Fixes

- use npm@5 ([@username](https://github.com/username)) ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🛠 Internals

- **[deps]** bump @dummy/package from 7.1.2 to 8.0.0 ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori replaces #[0-9]+ with issue URL 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- **[awesome]** fix #88 ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d)), closes  _#88_"
`;

exports[`conventional-changelog-ori replaces @username with GitHub user URL 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- **[awesome]** issue brought up by [@bcoe](https://github.com/bcoe)! on Friday ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori supports all types at once 1`] = `
"# 1.0.0 - 2019-02-26

New build system.

They are easier now!

#### 🎉 Release

- New major! ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 💥 Breaking

- Forms have changed ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🚀 Updates

- **[core]** settings refactor ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- **[modal, button]** added accessibility ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d)), closes  _#1_
  _#2_

- **[Test]** Hello darkness my old friend ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- amazing new module ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- Type of lastAddedCustomerOrderIds ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- **[router]** Fix params ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- updated i18n ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🔑 Security

- **[auth]** improved logic ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d)), closes  _#3_


#### ⚙️ Types

- Removed any ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🎨 Styles

- **[button]** polished rounded corners ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 📘 Docs

- added getting started ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 📦 Dependencies

- **[babel,jest]** Bumped to latest ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🛠 Internals

- **[ts]** updated types ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- setup testing framework ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- **[deps]** updated dev tools ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- **[travis]** fixed yaml config ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori supports non public GitHub repository locations 1`] = `
"## 3.0.0 - 2019-02-26

#### 🚀 Updates

- why this work? ([a1b2c3d](https://github.internal.example.com/conventional-changelog/internal/commit/a1b2c3d))
- **[events]** implementing #5 by [@dlmr](https://github.internal.example.com/dlmr) ([a1b2c3d](https://github.internal.example.com/conventional-changelog/internal/commit/a1b2c3d)), closes  _#5_
  _#10_"
`;

exports[`conventional-changelog-ori uses h1 for major versions 1`] = `
"# 1.0.0 - 2019-02-26

#### 🎉 Release

- new stuff ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 💥 Breaking

- new shit ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- just a patch ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori uses h2 for minor versions 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- **[modal]** better modals ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- new shit ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- new stuff ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- just a patch ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori uses h3 for patch versions 1`] = `
"### 1.0.0 - 2019-02-26

#### 🐞 Fixes

- just a patch ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 📘 Docs

- add a manual ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori works if there is a semver tag 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- some more features ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori works if there is no semver tag 1`] = `
"## 1.0.0 - 2019-02-26

New build system.

#### 🚀 Updates

- **[ngOptions]** make it faster ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d)), closes  _#1_
  _#2_

- **[Test]** Hello darkness my old friend ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- amazing new module ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- Type of lastAddedCustomerOrderIds ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- **[compile]** avoid a bug ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### ⚙️ Types

- Added unknown ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### ↩️ Reverts

- **[ngOptions]** bad commit ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))

#### 🛠 Internals

- Added before hooks ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- **[travis]** add TravisCI pipeline ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))
- first build setup ([a1b2c3d](https://github.com/rajzik/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-ori works with unknown host 1`] = `
"### 1.0.0 - 2019-02-26

#### 📘 Docs

- add manual ([a1b2c3d](http://unknown/commit/a1b2c3d))"
`;
